respond to tiny pr feedback